# firecrawl-simple-ui

./: .env.example  .gitignore  LICENSE  README.md  app.py  async_utils.py  batch-scrape.py  batch_scrape.py  config.hurl.example  crawl.py  deep_research.py  deepresearch.py  firecrawl_settings.json  llmstxt.py  map.py  pyproject.toml  requirements.txt  search.py  setup.cfg
doc/: batch_scrape.md  crawl.md  deep_research.md  extract.md  firecrawl-doc-url.txt  llmstxt.md  map.md  search.md
src/: __init__.py  app.py
