[metadata]
name = firecrawl-simple-ui
version = 0.1.0
description = Firecrawl Simple UI
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.10
install_requires =
    fastapi
    uvicorn
    pydantic
    httpx
    python-dotenv

[options.extras_require]
dev =
    pytest
    black
    isort
    mypy
    flake8